<resources>
    <string name="app_name">KLT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Missions</string>
    <string name="menu_about_us">Contact</string>
    <string name="menu_slideshow">Reports</string>
    <string name="to">To: </string>
    <string name="from">From: </string>
    <string name="mission">Mission</string>
    <string name="load_at">Load:</string>
    <string name="unload_at">Unload:</string>
    <string name="city_from">Kristianstad</string>
    <string name="expected_load_time">10:00</string>
    <string name="city_to">Malmö</string>
    <string name="expected_unload_time">13:00</string>
    <string name="klt_history">Kjellssons Logistik och Transport är ett familjeägt lager- och logistikföretag med Kristianstad som bas. Verksamheten startade i liten skala 1998 av Steve Kjellson med två lastbilar och en lagerbyggnad på 3 500 m2.. Sedan dess har företaget, numera med sonen Daniel och brorsonen Pelle vid rodret, utvecklat verksamheten på flera fronter och erbjuder idag såväl torr-, kyl- och fryslager som transporttjänster och lokaluthyrning till företag på totalt 36 000 m2 på Näsby industriområde i Kristianstad.</string>
    <string name="klt_history_title">Historia</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="log_out">Log out</string>
    <string name="first_mission">First mission</string>
    <string name="title_activity_missions">MissionsActivity</string>
    <string name="tab_text_1">Mission</string>
    <string name="tab_text_2">Schedule</string>
    <string name="action_create">Create</string>
    <string-array name="loading">
        <item name="start_loading">Start Loading!</item>
        <item name="loading_complete">Loading Complete!</item>
    </string-array>
    <string-array name="driving">
        <item name="start_Driving">Start Driving!</item>
        <item name="stop_Driving">Stop Driving!</item>
    </string-array>
    <string-array name="unloading">
        <item name="start_unloading">Start Unloading!</item>
        <item name="stop_Driving">Unloading Complete!</item>
    </string-array>
    <string-array name="wash">
        <item name="start_unloading">Washing!</item>
        <item name="stop_Driving">Washing Complete!</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_hint">Write note about mission</string>
    <string name="mission_note">Mission Note</string>
    <string name="enter_mission">Enter Mission</string>
    <string name="save_note">Save note</string>
    <string name="kontakt">Kontakt</string>
    <string name="kontakt_info">
Svetsarevägen 1, 291 36 Kristianstad \n\n Växel: +46(0)44 781 90 00 \n\n E-post: info@kjellssons.com \n\n Öppettider: 07.00–16.00 vardagar
 \n\n © Kjellssons Logistik &amp; Transport AB 2018 - Org. 556560-9244</string>
    <string name="loading">Loading</string>
    <string name="unloading">Unloading</string>
    <string name="driving">Driving</string>
    <string name="washing">Washing</string>
    <string name="notes">Notes</string>
    <string name="send">Send</string>
    <string name="loading_time">Loading time</string>
    <string name="driving_time">Driving time</string>
    <string name="washing_time">Washing time</string>
    <string name="unloading_time">Unloading time</string>
</resources>