<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <EditText
        android:id="@+id/driving_time"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/unloading_time"
        app:layout_constraintStart_toStartOf="@+id/unloading_text"
        app:layout_constraintTop_toBottomOf="@+id/unloading_text"
        android:autofillHints="Unloading time"
        tools:ignore="LabelFor" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note_edit"
        android:layout_width="360dp"
        android:layout_height="229dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="16"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="true"
        app:layout_constraintEnd_toEndOf="@+id/washing_time"
        app:layout_constraintStart_toStartOf="@+id/unloading_time"
        app:layout_constraintTop_toBottomOf="@+id/notes_text" />

    <EditText
        android:id="@+id/loading_time"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/loading_time"
        app:layout_constraintStart_toStartOf="@+id/loading_text"
        app:layout_constraintTop_toBottomOf="@+id/loading_text"
        android:autofillHints="Loading time"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/unloading_time"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/driving_time"
        app:layout_constraintStart_toStartOf="@+id/loading_time"
        app:layout_constraintTop_toBottomOf="@+id/driving_text"
        android:autofillHints="Driving time"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/washing_time"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/washing_time"
        app:layout_constraintEnd_toEndOf="@+id/driving_time"
        app:layout_constraintTop_toBottomOf="@+id/washing_text"
        android:autofillHints="Washing time"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/loading"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unloading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/unloading"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/driving_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/driving"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loading_time" />

    <TextView
        android:id="@+id/washing_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/washing"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driving_time" />

    <TextView
        android:id="@+id/notes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/notes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unloading_time" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_edit"
        app:layout_constraintVertical_bias="0.32" />

</androidx.constraintlayout.widget.ConstraintLayout>