<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:id="@+id/mission_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/mission"
            android:textAppearance="?attr/textAppearanceHeadline6" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/from"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/city_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/from"
                android:padding="10dp"
                android:text="@string/city_from"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toBottomOf="@+id/from"
                app:layout_constraintStart_toEndOf="@+id/from"
                app:layout_constraintTop_toTopOf="@+id/from" />

            <TextView
                android:id="@+id/load_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/from"
                android:padding="12dp"
                android:text="@string/load_at"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/from" />

            <TextView
                android:id="@+id/load_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city_from"
                android:layout_toEndOf="@id/load_at"
                android:text="@string/expected_load_time"
                app:layout_constraintBottom_toBottomOf="@+id/load_at"
                app:layout_constraintEnd_toEndOf="@+id/city_from"
                app:layout_constraintStart_toEndOf="@+id/load_at"
                app:layout_constraintTop_toBottomOf="@+id/from" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/city_from"
                android:padding="12dp"
                android:text="@string/to"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.032"
                app:layout_constraintStart_toEndOf="@+id/city_from"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/city_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:text="@string/city_to"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/to"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/unload_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city_to"
                android:layout_alignParentEnd="true"
                android:text="@string/expected_unload_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/city_to"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/city_to"
                app:layout_constraintVertical_bias="0.409" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/to"
                android:layout_alignBottom="@+id/unload_time"
                android:layout_toEndOf="@+id/load_time"
                android:text="@string/unload_at"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/to"
                app:layout_constraintStart_toStartOf="@+id/to"
                app:layout_constraintTop_toBottomOf="@+id/to" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>